# lemonade

./: .gitignore  CMakeLists.txt  KITTEN_TTS_TEST_REPORT.md  mkdocs.yml
.claude/: settings.local.json
docs/: BRAVE-LEO-INTEGRATION.md  GITHUB_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  METRICS_REFERENCE.md  TEAM_DASHBOARD_IMPLEMENTATION.md  TEAM_DASHBOARD_REARCHITECTURE.md
docs/assets/: mkdocs_requirements.txt
docs/prioritization-frameworks/: AGENT-PIPELINE-QUICKREF.md  IMPLEMENTATION-SUMMARY.md  KICKOFF-CHECKLIST.md  README.md  architecture.md  implementation-guide.md  pipeline.md
docs/prioritization-frameworks/frameworks/: eisenhower.md  ice.md  kano.md  moscow.md  p0p4.md  rice.md  value-effort.md  wsjf.md
docs/server/: README.md  concepts.md  python_sdk.md  server_spec.md
scripts/: build-kitten-tts.bat  build-kitten-tts.sh
src/app/: package-lock.json  package.json  styles.css
src/app/src/renderer/: BackendManager.tsx  ModelManager.tsx
src/app/src/renderer/components/: Icons.tsx
src/app/src/renderer/components/panels/: TEAM_DASHBOARD_README.md  TeamTrackingPanel.tsx
src/app/src/renderer/components/panels/TeamDashboard/: CreateIssueModal.tsx  IssueBoard.tsx  IssueCard.tsx  IssueDetailPanel.tsx  KPIDashboard.tsx  StrategicDashboard.tsx
src/app/src/renderer/components/panels/TeamDashboard/StrategicDashboard/: InitiativeHealth.tsx  InsightsPanel.tsx  KPICards.tsx  PortfolioSummary.tsx  QuickActions.tsx  SyncStatus.tsx
src/app/src/renderer/contexts/: TeamDashboardContext.tsx
src/app/src/renderer/hooks/: useIssues.tsx
src/app/src/renderer/metrics/: DevelopmentKPIs.ts  IndustryRelevance.ts  ROICalculator.ts  index.ts
src/app/src/renderer/services/: AIInsightsEngine.ts  SyncService.ts  index.ts
src/app/src/renderer/services/github/: GitHubService.ts
src/app/src/renderer/styles/: teamDashboard.css
src/app/src/renderer/tabs/: TTSSettings.tsx
src/app/src/renderer/types/: github.ts  index.ts  teamDashboard.ts  workItem.ts
src/app/src/renderer/utils/: issueStorage.ts  recipeNames.ts
src/cpp/: CMakeLists.txt
src/cpp/include/lemon/backends/: audio_encoder.h  iron_server.h  kitten_tts_native.h  kitten_tts_onnx_model.h  kitten_tts_phonemizer.h  kitten_tts_preprocessor.h  kitten_tts_server.h  kitten_tts_voice.h
src/cpp/include/lemon/utils/: npz_reader.h
src/cpp/resources/: backend_versions.json  server_models.json
src/cpp/server/: model_manager.cpp  router.cpp  system_info.cpp
src/cpp/server/backends/: audio_encoder.cpp  backend_utils.cpp  iron_server.cpp  kitten_tts_native.cpp  kitten_tts_onnx_model.cpp  kitten_tts_phonemizer.cpp  kitten_tts_preprocessor.cpp  kitten_tts_server.cpp  kitten_tts_voice.cpp
src/cpp/server/kitten-tts-server/: CMakeLists.txt  README.md  main.cpp
src/cpp/server/utils/: npz_reader.cpp
src/prioritization-app/: .dockerignore  DEPLOYMENT.md  README.md  TESTING.md  docker-compose.yml  package-lock.json  package.json
src/prioritization-app/.github/workflows/: ci.yml
src/prioritization-app/backend/: .env.production  nixpacks.toml  package-lock.json  vitest.config.ts
src/prioritization-app/backend/src/agents/: PlanningAgent.ts  types.ts
src/prioritization-app/backend/src/api/: routes.ts
src/prioritization-app/backend/src/mcp/: MCPClient.ts
src/prioritization-app/backend/src/types/: index.ts
src/prioritization-app/backend/tests/: setup.ts
src/prioritization-app/backend/tests/api/: prioritization.test.ts
src/prioritization-app/backend/tests/services/: SessionService.test.ts
src/prioritization-app/e2e/: package.json  playwright.config.ts
src/prioritization-app/e2e/tests/: agent-pipeline.spec.ts  backlog-management.spec.ts  framework-selection.spec.ts  prioritization-flow.spec.ts
src/prioritization-app/frontend/: .env.example  .env.production  nginx.conf  package.json  tsconfig.node.json  vite.config.ts
src/prioritization-app/frontend/src/: App.tsx  main.js  vite-env.d.ts
src/prioritization-app/frontend/src/components/agents/: AgentProgress.js
src/prioritization-app/frontend/src/components/backlog/: index.ts
src/prioritization-app/frontend/src/components/common/: Badge.tsx  Card.js  Card.tsx  Input.tsx  Select.js  Slider.js  Slider.tsx  index.js  index.ts
src/prioritization-app/frontend/src/components/framework/: EisenhowerInputForm.js  EisenhowerInputForm.tsx  ICEInputForm.tsx  KanoInputForm.js  MoSCoWInputForm.tsx  P0P4InputForm.js  P0P4InputForm.tsx  ValueEffortInputForm.tsx  WSJFInputForm.js  WSJFInputForm.tsx
src/prioritization-app/frontend/src/components/results/: FrameworkMatrix.js  index.ts
src/prioritization-app/frontend/src/hooks/: index.js  index.ts  useAgentPipeline.js  useAgentPipeline.ts
src/prioritization-app/frontend/src/services/prioritization/: index.js  index.ts  types.d.ts.map  types.ts
src/prioritization-app/frontend/src/services/prioritization/auto-fill/: AutoFillEngine.js  AutoFillEngine.ts  MetricsExtractor.js
src/prioritization-app/frontend/src/services/prioritization/calculators/: EisenhowerCalculator.d.ts  ICECalculator.d.ts  ICECalculator.js  KanoCalculator.d.ts  KanoCalculator.d.ts.map  KanoCalculator.js  KanoCalculator.js.map  MoSCoWCalculator.d.ts  MoSCoWCalculator.d.ts.map  MoSCoWCalculator.test.ts  P0P4Calculator.d.ts  P0P4Calculator.d.ts.map  P0P4Calculator.js  P0P4Calculator.js.map  P0P4Calculator.ts  RICECalculator.d.ts.map  RICECalculator.js.map  RICECalculator.ts  ValueEffortCalculator.js.map  ValueEffortCalculator.ts  WSJFCalculator.d.ts  WSJFCalculator.d.ts.map  WSJFCalculator.ts
src/prioritization-app/frontend/src/styles/: agent-progress.css  global.css
src/prioritization-app/frontend/src/tests/: setup.ts
test/: server_kitten_tts.py
